# Archives-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  test.py
agents/: __init__.py  fetcher.py  mcp_client.py  publisher.py  schema.py  vision.py  writer_critic.py
agents/.adk/: session.db
agents/fetcher/: __init__.py  agent.py
agents/orchestrator/: __init__.py  agent.py  config.py  mcp_client.py  schema.py
agents/orchestrator/.adk/: session.db
agents/orchestrator/audio/: agent.py
agents/orchestrator/fetcher/: agent.py
agents/orchestrator/publisher/: agent.py
agents/orchestrator/research/: agent.py
agents/orchestrator/synthesis/: agent.py
agents/orchestrator/taxonomy/: agent.py
agents/orchestrator/vision/: agent.py
agents/publisher/: __init__.py  agent.py
agents/synthesis/: __init__.py  agent.py
agents/vision/: __init__.py  agent.py
